<?xml version="1.0"?>
<package format="3">
  <name>robomaster_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo bringup for the RoboMaster EP</description>
  <maintainer email="desaia11@msu.edu">Ankur</maintainer>
  <license>MIT</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robomaster_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>